chore: reference internal modules to generate proper javadoc